# InvisiThreat

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json
.github/ISSUE_TEMPLATE/: OLD_pipeline.yml  backup_succ_pipeline.yml  backup_template_importdefect.yml  pipeline_complet  pipeline_complet.yml  pipeline_defectdojo.yml  pipeline_modulaire_devsecops.yml  project.config.yml
.github/workflows/: devsecops.yml
documentation/: 01-index.md  02-cicd.md  03-infrastructure.md  04-architecture.md  05-risk-scoring-engine.md  06-backend.md  07-security-dashboard.md
infrastructure/ansible/: ensure-defectdojo.yml  inventory.yml  playbook-ingress-install.yml  playbook-k3s-install.yml  playbook-metallb-install.yml  playbook-monitoring-install.yml  playbook.yml
infrastructure/kubernetes/: configmap.yaml  external-services.yaml  namespace.yaml
infrastructure/nginx/: nginx.conf
juice-shop/: app.json  package.json
projects/campusConnect/: pom.xml  project.config.yml
projects/juice-shop/: package.json  project.config.yml
projects/nova/: .dockerignore  .gitignore  Dockerfile  README.md  project.config.yml  pyproject.toml  requirements.txt
projects/nova/src/nova/: __init__.py  app.py  database.py
projects/nova/tests/: __init__.py  test_app.py
projects/secureVault-API/: .gitignore  README.md  package.json  project.config.yml
risk-scoring-engine/: .dockerignore  .env  Dockerfile  requirements.txt
security-dashboard/: .dockerignore  Dockerfile  index.html  nginx-spa.conf  package-lock.json  package.json
(+300 files in other folders)
