[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build-meta"

[project]
name = "nova"
version = "0.1.0"
description = "A structured Python project designed with deliberate vulnerabilities for SAST, DAST, and SCA scanning tests."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask==2.0.1",
    "Jinja2==3.0.1",
    "requests==2.25.1",
    "urllib3==1.26.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]
